# games-wishlist-app

./: Dockerfile  Pipfile  README.md  pyproject.toml  requirements.txt
app/: app.py
